<?xml version="1.0"?>
<package format="3">
  <name>stb</name>
  <version>0.0.0</version>
  <description>MIT</description>
  <maintainer email="tbd@tbd.tbd">tbd</maintainer>

  <license>BSD</license>
  <build_depend>git</build_depend>
  <!-- The following tags are recommended by REP-136 -->
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
